--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
 	<body>
 		<div class="title">Rogerphysical的主目錄</div>
 		<div class="title2">這是一個存放其他自製網頁的起點總站</div>
-		<div class="item">看得見</div>
-		<div class="item">看不見</div>
-		<div class="item">見著了</div>
-		<div class="item">也不一定是它</div>
+		<div class="items">
+			<div class="item">看得見</div>
+			<div class="item">看不見</div>
+			<div class="item">見著了</div>
+			<div class="item">也不一定是它</div>
+		</div>
+		
 		<div class="title2">我想，終點站將遙遙無期</div>
 		<div class="title2">lim(u&rarr;&pi;/2)&int;sec&sup2;(u)du</div>
 	</body>
