--- a/index.html
+++ b/index.html
@@ -2,13 +2,19 @@
 <html lang="zh-TW">
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="icon" type="image/x-icon" href="images/radius.jpg">
 		<title>Rogerphysical的主目錄</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<script type="text/javascript" src="js/script.js"></script>
 	</head>
 	<body>
 		<div class="title">Rogerphysical的主目錄</div>
 		<div class="title2">這是一個存放其他自製網頁的起點總站</div>
 		<div class="items">
+			<a href="roger_blogger/index.html" target="_blank">
+				<div class="item">Roger Blogger</div>
+			</a>
 			<div class="item">看得見</div>
 			<div class="item">看不見</div>
 			<div class="item">見著了</div>
