--- a/index.html
+++ b/index.html
@@ -9,17 +9,26 @@
 		<script type="text/javascript" src="js/script.js"></script>
 	</head>
 	<body>
-		<div class="title">Rogerphysical的主目錄</div>
+		<div class="title">坴奉Roger</div>
 		<div class="title2">這是一個存放其他自製網頁的起點總站</div>
 		<div class="items">
 			<a href="roger_blogger/index.html" target="_blank">
-				<div class="item">Roger Blogger</div>
+				<div class="item">部落格</div>
 			</a>
-			<div class="item">看得見</div>
-			<div class="item">看不見</div>
-			<div class="item">見著了</div>
-			<div class="item">也不一定是它</div>
+			<div class="item">
+				<div>阿堵物</div>
+				<div class="item">看得見</div>
+				<div class="item">看不見</div>
+			</div>
+			<div class="item">
+				<div>&nbsp;</div>
+				<div class="item">見著了</div>
+				<div class="item">也不一定是它</div>
+			</div>
 		</div>
 		<div class="title2">我想，終點站將遙遙無期&infin;</div>
+		<div class="footer">
+			Copyright &copy; 2020 坴奉Roger
+		</div>
 	</body>
 </html>
