--- a/index.html
+++ b/index.html
@@ -3,28 +3,67 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="icon" type="image/x-icon" href="images/radius.jpg">
+		<link rel="icon" type="image/x-icon" href="images/radius.ico">
 		<title>Rogerphysical的主目錄</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script type="text/javascript" src="js/script.js"></script>
 	</head>
 	<body>
 		<div class="title">坴奉Roger</div>
 		<div class="title2">這是一個存放其他自製網頁的起點總站</div>
 		<div class="items">
-			<a href="roger_blogger/index.html" target="_blank">
-				<div class="item">部落格</div>
-			</a>
-			<div class="item">
-				<div>阿堵物</div>
+
+			<div id="page" class="page">
+				<a href="roger_blogger/index.html" target="_blank">
+					<div class="item">部落格</div>
+				</a>
+				<div class="item" onclick="to_page('#page', '#page1')">
+					<div class="item_l">阿</div>
+					<div class="item_r arrow_r">&nabla;</div>
+				</div>
+				<div class="item" onclick="to_page('#page', '#page2')">
+					<div class="item_l">&nbsp;</div>
+					<div class="item_r arrow_r">&nabla;</div>
+				</div>
+			</div>
+			<div id="page1" class="page">
+				<div class="item" onclick="to_page_l('#page1', '#page')">
+					<div class="item_l arrow_l">&nabla;</div>
+					<div class="item_r">阿</div>
+				</div>
+				<div class="item" onclick="to_page('#page1', '#page11')">
+					<div class="item_l">堵</div>
+					<div class="item_r arrow_r">&nabla;</div>
+				</div>
+			</div>
+			<div id="page11" class="page">
+				<div class="item" onclick="to_page_l('#page11', '#page1')">
+					<div class="item_l arrow_l">&nabla;</div>
+					<div class="item_r">堵</div>
+				</div>
+				<div class="item" onclick="to_page('#page11', '#page111')">
+					<div class="item_l">物</div>
+					<div class="item_r arrow_r">&nabla;</div>
+				</div>
+			</div>
+			<div id="page111" class="page">
+				<div class="item" onclick="to_page_l('#page111', '#page11')">
+					<div class="item_l arrow_l">&nabla;</div>
+					<div class="item_r">物</div>
+				</div>
+			</div>
+			<div id="page2" class="page">
+				<div class="item" onclick="to_page_l('#page2', '#page')">
+					<div class="item_l arrow_l">&nabla;</div>
+					<div class="item_r">&nbsp;</div>
+				</div>
 				<div class="item">看得見</div>
 				<div class="item">看不見</div>
-			</div>
-			<div class="item">
-				<div>&nbsp;</div>
 				<div class="item">見著了</div>
 				<div class="item">也不一定是它</div>
 			</div>
+
 		</div>
 		<div class="title2">我想，終點站將遙遙無期&infin;</div>
 		<div class="footer">
