--- a/index.html
+++ b/index.html
@@ -14,6 +14,82 @@
 		<div class="title2">這是一個存放其他自製網頁的起點總站</div>
 		<div class="items">
 
+			<div id="page25" class="page">
+				<div class="item" onclick="to_page_l('#page25', '#page24')">
+					<div class="item_l arrow_l">&nabla;</div>
+					<div class="item_r">也不一定有用</div>
+				</div>
+				<div class="img_com">
+					<div id="img_com1"></div>
+				</div>
+			</div>
+			<div id="page24" class="page">
+				<div class="item" onclick="to_page_l('#page24', '#page23')">
+					<div class="item_l arrow_l">&nabla;</div>
+					<div class="item_r">見到了</div>
+				</div>
+				<div class="item" onclick="to_page('#page24', '#page25')">
+					<div class="item_l">也不一定有用</div>
+					<div class="item_r arrow_r">&nabla;</div>
+				</div>
+				<div class="img_com">
+					<div id="img_com2"></div>
+				</div>
+			</div>
+			<div id="page23" class="page">
+				<div class="item" onclick="to_page_l('#page23', '#page22')">
+					<div class="item_l arrow_l">&nabla;</div>
+					<div class="item_r">&nbsp;</div>
+				</div>
+				<div class="item" onclick="to_page('#page23', '#page24')">
+					<div class="item_l">見到了</div>
+					<div class="item_r arrow_r">&nabla;</div>
+				</div>
+				<div class="img_com">
+					<div id="img_com5"></div>
+				</div>
+			</div>
+			<div id="page22" class="page">
+				<div class="item" onclick="to_page_l('#page22', '#page21')">
+					<div class="item_l arrow_l">&nabla;</div>
+					<div class="item_r">看不見</div>
+				</div>
+				<div class="item" onclick="to_page('#page22', '#page23')">
+					<div class="item_l">&nbsp;</div>
+					<div class="item_r arrow_r">&nabla;</div>
+				</div>
+				<div class="img_com">
+					<div id="img_com3"></div>
+				</div>
+			</div>
+			<div id="page21" class="page">
+				<div class="item" onclick="to_page_l('#page21', '#page2')">
+					<div class="item_l arrow_l">&nabla;</div>
+					<div class="item_r">看得見</div>
+				</div>
+				<div class="item" onclick="to_page('#page21', '#page22')">
+					<div class="item_l">看不見</div>
+					<div class="item_r arrow_r">&nabla;</div>
+				</div>
+				<div class="img_com">
+					<div id="img_com4"></div>
+				</div>
+			</div>
+			<div id="page2" class="page">
+				<div class="item" onclick="to_page_l('#page2', '#page')">
+					<div class="item_l arrow_l">&nabla;</div>
+					<div class="item_r">關機</div>
+				</div>
+				<div class="item" onclick="to_page('#page2', '#page21')">
+					<div class="item_l">看得見</div>
+					<div class="item_r arrow_r">&nabla;</div>
+				</div>
+				<div class="img_com">
+					<div id="img_com6">
+					</div>
+				</div>
+			</div>
+
 			<div id="page" class="page">
 				<a href="roger_blogger/index.html" target="_blank">
 					<div class="item">部落格</div>
@@ -23,10 +99,11 @@
 					<div class="item_r arrow_r">&nabla;</div>
 				</div>
 				<div class="item" onclick="to_page('#page', '#page2')">
-					<div class="item_l">&nbsp;</div>
+					<div class="item_l">關機</div>
 					<div class="item_r arrow_r">&nabla;</div>
 				</div>
 			</div>
+
 			<div id="page1" class="page">
 				<div class="item" onclick="to_page_l('#page1', '#page')">
 					<div class="item_l arrow_l">&nabla;</div>
@@ -52,16 +129,6 @@
 					<div class="item_l arrow_l">&nabla;</div>
 					<div class="item_r">物</div>
 				</div>
-			</div>
-			<div id="page2" class="page">
-				<div class="item" onclick="to_page_l('#page2', '#page')">
-					<div class="item_l arrow_l">&nabla;</div>
-					<div class="item_r">&nbsp;</div>
-				</div>
-				<div class="item">看得見</div>
-				<div class="item">看不見</div>
-				<div class="item">見著了</div>
-				<div class="item">也不一定是它</div>
 			</div>
 
 		</div>
