--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 			<div id="page2" class="page">
 				<div class="item" onclick="to_page_l('#page2', '#page')">
 					<div class="item_l arrow_l">&nabla;</div>
-					<div class="item_r">關機</div>
+					<div class="item_r">電源鍵</div>
 				</div>
 				<div class="item" onclick="to_page('#page2', '#page21')">
 					<div class="item_l">看得見</div>
@@ -94,12 +94,15 @@
 				<a href="roger_blogger/index.html" target="_blank">
 					<div class="item">部落格</div>
 				</a>
+				<a href="message/index.html" target="_blank">
+					<div class="item">留言系統</div>
+				</a>
 				<div class="item" onclick="to_page('#page', '#page1')">
 					<div class="item_l">阿</div>
 					<div class="item_r arrow_r">&nabla;</div>
 				</div>
 				<div class="item" onclick="to_page('#page', '#page2')">
-					<div class="item_l">關機</div>
+					<div class="item_l">電源鍵</div>
 					<div class="item_r arrow_r">&nabla;</div>
 				</div>
 			</div>
