--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<script type="text/javascript" src="js/script.js"></script>
 	</head>
 	<body>
-		<div class="title">坴奉Roger</div>
+		<div id="title" class="title">坴奉Roger</div>
 		<div class="title2">這是一個存放其他自製網頁的起點總站</div>
 		<div class="items">
 
@@ -85,52 +85,21 @@
 					<div class="item_r arrow_r">&nabla;</div>
 				</div>
 				<div class="img_com">
-					<div id="img_com6">
-					</div>
+					<div id="img_com6" onclick="close1()"></div>
 				</div>
 			</div>
 
 			<div id="page" class="page">
-				<a href="roger_blogger/index.html" target="_blank">
-					<div class="item">部落格</div>
-				</a>
+				<div class="item">部落格(doing...)</div>
 				<a href="message/index.html" target="_blank">
-					<div class="item">留言系統</div>
+					<div class="item">假‧留言系統</div>
 				</a>
-				<div class="item" onclick="to_page('#page', '#page1')">
-					<div class="item_l">阿</div>
-					<div class="item_r arrow_r">&nabla;</div>
-				</div>
+				<a href="read_novel/index.html" target="_blank">
+					<div class="item">類小說閱讀器</div>
+				</a>
 				<div class="item" onclick="to_page('#page', '#page2')">
 					<div class="item_l">電源鍵</div>
 					<div class="item_r arrow_r">&nabla;</div>
-				</div>
-			</div>
-
-			<div id="page1" class="page">
-				<div class="item" onclick="to_page_l('#page1', '#page')">
-					<div class="item_l arrow_l">&nabla;</div>
-					<div class="item_r">阿</div>
-				</div>
-				<div class="item" onclick="to_page('#page1', '#page11')">
-					<div class="item_l">堵</div>
-					<div class="item_r arrow_r">&nabla;</div>
-				</div>
-			</div>
-			<div id="page11" class="page">
-				<div class="item" onclick="to_page_l('#page11', '#page1')">
-					<div class="item_l arrow_l">&nabla;</div>
-					<div class="item_r">堵</div>
-				</div>
-				<div class="item" onclick="to_page('#page11', '#page111')">
-					<div class="item_l">物</div>
-					<div class="item_r arrow_r">&nabla;</div>
-				</div>
-			</div>
-			<div id="page111" class="page">
-				<div class="item" onclick="to_page_l('#page111', '#page11')">
-					<div class="item_l arrow_l">&nabla;</div>
-					<div class="item_r">物</div>
 				</div>
 			</div>
 
