--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
 				<a href="read_novel/index.html" target="_blank">
 					<div class="item">類小說閱讀器</div>
 				</a>
+				<a href="calculator/index.html" target="_blank">
+					<div class="item">各種計算器</div>
+				</a>
 				<div class="item" onclick="to_page('#page', '#page2')">
 					<div class="item_l">電源鍵</div>
 					<div class="item_r arrow_r">&nabla;</div>
