--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
 			</div>
 
 			<div id="page" class="page">
-				<div class="item">部落格(doing...)</div>
+				<a href="roger_blogger/index.html" target="_blank">
+					<div class="item">部落格</div>
+				</a>
 				<a href="message/index.html" target="_blank">
 					<div class="item">假‧留言系統</div>
 				</a>
