--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 		<script type="text/javascript" src="script.js"></script>
 	</head>
 	<body>
-		<div id="title" class="title">部落格(實驗室)</div>
-		<div class="title2">坴奉Roger 創</div>
-		<div class="items">
+		<div id="title1">部落格(實驗室)</div>
+		<div id="title2">坴奉Roger 創</div>
+		
+		<div id="items">
 
 			<div id="page25" class="page">
 				<div class="item" onclick="to_page_l('#page25', '#page24'), tips('')">
@@ -95,7 +96,7 @@
 					<div class="item">首頁(正門)</div>
 				</a>
 
-				<!-- <a href="roger_blogger/index.html" target="_blank">
+				<!-- <a href="roger_blogger/index1.html">
 					<div class="item">內頁(側門)</div>
 				</a> -->
 
