--- a/index.html
+++ b/index.html
@@ -3,24 +3,24 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="icon" type="image/x-icon" href="images/unknown_radius.ico">
-		<title>Rogerphysical的主目錄</title>
+		<link rel="icon" type="image/x-icon" href="images/magic_square2.ico">
+		<title>Roger的實驗室點位</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script type="text/javascript" src="script.js"></script>
 	</head>
 	<body>
-		<div id="title1">部落格(實驗室)</div>
+		<div id="title1">實驗室點位</div>
 		<div id="title2">坴奉Roger 創</div>
 		
 		<div id="items">
 
 			<div id="page25" class="page">
-				<div class="item" onclick="to_page_l('#page25', '#page24'), tips('')">
+				<div class="item" onclick="to_page_l('#page25', '#page24'), tips('page25_2', 'Tips')">
 					<div class="item_l arrow_l">&nabla;</div>
 					<div class="item_r">也不一定有用</div>
 				</div>
-				<div class="item" onclick="tips('Tips:(l(lr)^2)^2r')">Tips</div>
+				<div id="page25_2" class="item" onclick="tips('page25_2', 'Tips: (l(lr)^2)^2r')">Tips</div>
 				<div class="img_com">
 					<div id="img_com1"></div>
 				</div>
@@ -93,23 +93,31 @@
 
 			<div id="page" class="page">
 				<a href="roger_blogger/index.html" target="_blank">
-					<div class="item">首頁(正門)</div>
+					<div class="item">正門</div>
 				</a>
 
-				<!-- <a href="roger_blogger/index1.html">
-					<div class="item">內頁(側門)</div>
-				</a> -->
-
-				<a href="roger_blogger/index0.html" target="_blank">
-					<div class="item">尾頁(後門)</div>
+				<a href="read_novel/index.html" target="_blank">
+					<div class="item">冊號窗口</div>
 				</a>
 
 				<!-- <a href="roger_blogger/index.html" target="_blank">
-					<div class="item">首頁(窗口)</div>
+					<div class="item">後門</div>
 				</a> -->
 
 				<!-- <a href="roger_blogger/index.html" target="_blank">
-					<div class="item">隱藏頁(隱藏門)</div>
+					<div class="item">假門</div>
+				</a> -->
+
+				<!-- <a href="roger_blogger/index.html" target="_blank">
+					<div class="item">地下門</div>
+				</a> -->
+
+				<!-- <a href="roger_blogger/index.html" target="_blank">
+					<div class="item">密碼門</div>
+				</a> -->
+
+				<!-- <a href="roger_blogger/index.html" target="_blank">
+					<div class="item">隱藏門</div>
 				</a> -->
 
 				<div class="item" onclick="to_page('#page', '#page2')">
@@ -119,7 +127,6 @@
 			</div>
 
 		</div>
-		<div id="tips" class="title2" style="color: #F00;"></div>
 		<div class="footer">
 			Copyright &copy; 2020 坴奉Roger
 		</div>
