--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
 
 			<div id="page" class="page">
 				<a href="roger_blogger/index.html" target="_blank">
-					<div class="item">正門</div>
+					<div class="item">中央正門</div>
 				</a>
 
 				<a href="read_novel/index.html" target="_blank">
-					<div class="item">冊號窗口</div>
+					<div class="item">冊號櫥窗</div>
 				</a>
 
 				<!-- <a href="roger_blogger/index.html" target="_blank">
@@ -121,14 +121,21 @@
 				</a> -->
 
 				<div class="item" onclick="to_page('#page', '#page2')">
-					<div class="item_l">總電源</div>
+					<div class="item_l">電源閘門</div>
 					<div class="item_r arrow_r">&nabla;</div>
 				</div>
-			</div>
 
-		</div>
-		<div class="footer">
-			Copyright &copy; 2020 坴奉Roger
+				<div id="footer_floor">
+					<div id="footer">
+						Copyright &copy; 2020 坴奉Roger
+					</div>
+					<div id="footer_cover" onclick="show_copyright()">
+						<div class="item_l">版權所有</div>
+						<div class="item_r arrow_r">&nabla;</div>
+					</div>
+				</div>
+
+			</div>
 		</div>
 	</body>
 </html>
