--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 		<div id="title2">坴奉Roger 創</div>
 		
 		<div id="items">
-
 			<div id="page25" class="page">
 				<div class="item" onclick="to_page_l('#page25', '#page24'), tips('page25_2', 'Tips')">
 					<div class="item_l arrow_l">&nabla;</div>
@@ -25,6 +24,7 @@
 					<div id="img_com1"></div>
 				</div>
 			</div>
+
 			<div id="page24" class="page">
 				<div class="item" onclick="to_page_l('#page24', '#page23')">
 					<div class="item_l arrow_l">&nabla;</div>
@@ -38,6 +38,7 @@
 					<div id="img_com2"></div>
 				</div>
 			</div>
+
 			<div id="page23" class="page">
 				<div class="item" onclick="to_page_l('#page23', '#page22')">
 					<div class="item_l arrow_l">&nabla;</div>
@@ -51,6 +52,7 @@
 					<div id="img_com5"></div>
 				</div>
 			</div>
+
 			<div id="page22" class="page">
 				<div class="item" onclick="to_page_l('#page22', '#page21')">
 					<div class="item_l arrow_l">&nabla;</div>
@@ -64,6 +66,7 @@
 					<div id="img_com3"></div>
 				</div>
 			</div>
+			
 			<div id="page21" class="page">
 				<div class="item" onclick="to_page_l('#page21', '#page2')">
 					<div class="item_l arrow_l">&nabla;</div>
@@ -77,6 +80,7 @@
 					<div id="img_com4"></div>
 				</div>
 			</div>
+
 			<div id="page2" class="page">
 				<div class="item" onclick="to_page_l('#page2', '#page')">
 					<div class="item_l arrow_l">&nabla;</div>
@@ -125,13 +129,11 @@
 					<div class="item_r arrow_r">&nabla;</div>
 				</div>
 
-				<div id="footer_floor">
+				<div class="item" style="position: relative;" onclick="show_copyright()">
+					<div class="item_l">版權所有</div>
+					<div class="item_r arrow_r">&nabla;</div>
 					<div id="footer">
 						Copyright &copy; 2020 坴奉Roger
-					</div>
-					<div id="footer_cover" onclick="show_copyright()">
-						<div class="item_l">版權所有</div>
-						<div class="item_r arrow_r">&nabla;</div>
 					</div>
 				</div>
 
