--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 		
 		<div id="items">
 			<div id="page25" class="page">
+				<div class="item_center">也不一定有用</div>
 				<div class="item" onclick="to_page_l('#page25', '#page24'), tips('page25_2', 'Tips')">
 					<div class="item_l arrow_l">&nabla;</div>
-					<div class="item_r">也不一定有用</div>
+					<div class="item_r">見到了</div>
 				</div>
 				<div id="page25_2" class="item" onclick="tips('page25_2', 'Tips: (l(lr)^2)^2r')">Tips</div>
 				<div class="img_com">
@@ -26,9 +27,10 @@
 			</div>
 
 			<div id="page24" class="page">
+				<div class="item_center">見到了</div>
 				<div class="item" onclick="to_page_l('#page24', '#page23')">
 					<div class="item_l arrow_l">&nabla;</div>
-					<div class="item_r">見到了</div>
+					<div class="item_r">&nbsp;</div>
 				</div>
 				<div class="item" onclick="to_page('#page24', '#page25')">
 					<div class="item_l">也不一定有用</div>
@@ -40,9 +42,10 @@
 			</div>
 
 			<div id="page23" class="page">
+				<div class="item_center">&nbsp;</div>
 				<div class="item" onclick="to_page_l('#page23', '#page22')">
 					<div class="item_l arrow_l">&nabla;</div>
-					<div class="item_r">&nbsp;</div>
+					<div class="item_r">看不見</div>
 				</div>
 				<div class="item" onclick="to_page('#page23', '#page24')">
 					<div class="item_l">見到了</div>
@@ -54,9 +57,10 @@
 			</div>
 
 			<div id="page22" class="page">
+				<div class="item_center">看不見</div>
 				<div class="item" onclick="to_page_l('#page22', '#page21')">
 					<div class="item_l arrow_l">&nabla;</div>
-					<div class="item_r">看不見</div>
+					<div class="item_r">看得見</div>
 				</div>
 				<div class="item" onclick="to_page('#page22', '#page23')">
 					<div class="item_l">&nbsp;</div>
@@ -68,9 +72,10 @@
 			</div>
 			
 			<div id="page21" class="page">
+				<div class="item_center">看得見</div>
 				<div class="item" onclick="to_page_l('#page21', '#page2')">
 					<div class="item_l arrow_l">&nabla;</div>
-					<div class="item_r">看得見</div>
+					<div class="item_r">電源閘門</div>
 				</div>
 				<div class="item" onclick="to_page('#page21', '#page22')">
 					<div class="item_l">看不見</div>
@@ -82,9 +87,10 @@
 			</div>
 
 			<div id="page2" class="page">
+				<div class="item_center">電源閘門</div>
 				<div class="item" onclick="to_page_l('#page2', '#page')">
 					<div class="item_l arrow_l">&nabla;</div>
-					<div class="item_r">總電源</div>
+					<div class="item_r">主頁面</div>
 				</div>
 				<div class="item" onclick="to_page('#page2', '#page21')">
 					<div class="item_l">看得見</div>
